rust/macros/tests/invalid/target/debug/deps/two_arrows-92d519524a38f921.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows-92d519524a38f921.d: two_arrows.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libtwo_arrows-92d519524a38f921.rmeta: two_arrows.rs Cargo.toml

two_arrows.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
